<resources>
    <string name="app_name">AnimationPlayground</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alpha">alpha</string>
    <string name="scale">scale</string>
    <string name="translate">translate</string>
    <string name="rotate">rotate</string>
    <string name="animation_set">set</string>
    <string name="animation_listener">listener</string>
    <string name="accelerate_interpolator">AccelerateInterpolator</string>
    <string name="decelerate_interpolator">DecelerateInterpolator</string>
    <string name="linear_interpolator">LinearInterpolator</string>
    <string name="over_shoot_interpolator">OvershootInterpolator</string>
    <string name="accelerate_decelerate_interpolator">AccelerateDecelerateInterpolator</string>
    <string name="anticipate_interpolator">AnticipateInterpolator</string>
    <string name="anticipate_over_shoot_interpolator">AnticipateOvershootInterpolator</string>
    <string name="bounce_interpolator">BounceInterpolator</string>
    <string name="cycle_interpolator">CycleInterpolator</string>
    <string name="interpolator">interpolator</string>

    <string name="views_animation">Views Animations</string>
    <string name="properties_animation">Properties Animations</string>
    <string name="x_position">X Position</string>
    <string name="z_rotation">Z Rotation</string>
    <string name="background">Background</string>
    <string name="animation_key_frame">Key Frame</string>
    <string name="Canvas">Canvas</string>
    <string name="canvas_image_view">Canvas Image View</string>
    <string name="arc">Arc</string>
    <string name="circle">Circle</string>
    <string name="oval">Oval</string>
    <string name="point">Point</string>
    <string name="Path">Path</string>
    <string name="line">Line</string>
    <string name="rounded_rect">R Rect</string>
    <string name="rectangle">Rect</string>
    <string name="start">start</string>
    <string name="frame_animation">Frame Animation</string>
    <string name="layout_animation">Layout Animation</string>
    <string name="animation_fade_in">Fade in</string>
    <string name="animation_fade_in_left">Fade in left</string>
    <string name="animation_rotate">rotate</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="activity_transition">Activity Transition</string>
    <string name="activity">Activity</string>
    <string name="fragment">Fragment</string>
</resources>