<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="32dp">

        <Button
            android:id="@+id/views_animation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/views_animation" />

        <Button
            android:id="@+id/properties_animation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/properties_animation" />

        <Button
            android:id="@+id/canvas_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Canvas" />
        <Button
            android:id="@+id/frame_animation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_animation" />

        <Button
            android:id="@+id/layout_animation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_animation" />

        <Button
            android:id="@+id/activity_transition_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_transition" />
    </LinearLayout>

</FrameLayout>